implemented redis caching and updated openapi specification
